Add date column to dir table

--- a/bin/views/application.sass
+++ b/bin/views/application.sass
@@ -26,12 +26,14 @@ a
 #files td
   padding: 2px 5px
   color: #668284
+  font-size: 0.9em
 
 #files .icon
   width: 16px
+#files .age
+  width: 20%
 #files td a
   text-decoration: none
   color: #668284
 #files td a:hover
   text-decoration: underline
-#files .message
