--- a/bin/views/application.sass
+++ b/bin/views/application.sass
@@ -6,8 +6,16 @@ h2
   color: cornflowerblue
 
 a
-  color: #493796
+  color: cornflowerblue
   text-decoration: none
+a:hover
+  text-decoration: underline
+
+#path
+  font-size: 1.3em
+  padding: 10px 0
+#repo-name
+  font-weight: bold
 
 #content h2
   font-size: 1.2em
