--- a/bin/views/dir_listing.haml
+++ b/bin/views/dir_listing.haml
@@ -1,5 +1,5 @@
-%h2
-  = @path
-= partial :dir, :locals => {:path_prefix => @path_prefix, :objs => @objs}
+%div#path
+  - render_path(@path, params[:branch])
+= partial :dir, :locals => {:path_prefix => @url_prefix, :objs => @objs}
 %p
   %a{:href => '/'} Home
