Change style of links

--- a/bin/views/application.sass
+++ b/bin/views/application.sass
@@ -2,11 +2,13 @@ body
   width: 1000px
   margin: auto
 
+!blue_clr= #227CE8
+
 h2
-  color: cornflowerblue
+  :color= !blue_clr
 
 a
-  color: cornflowerblue
+  :color= !blue_clr
   text-decoration: none
 a:hover
   text-decoration: underline
@@ -45,3 +47,4 @@ a:hover
   color: #668284
 #files td a:hover
   text-decoration: underline
+  :color= !blue_clr
