Yet another change of page styles

--- a/bin/views/application.sass
+++ b/bin/views/application.sass
@@ -13,6 +13,19 @@ a
 a:hover
   text-decoration: underline
 
+#header
+  padding: 5px 25px
+  border-bottom: 2px solid #66A3D2
+  background-color: #66A3D2
+  margin-top: 10px
+  color: #FFF
+#header p
+  padding: 0
+  margin: 0
+#header h1
+  padding: 0
+  margin: 0
+
 #path
   font-size: 1.3em
   padding: 10px 0
@@ -28,23 +41,29 @@ a:hover
 #files th
   text-align: left
   padding: 2px 5px
-  background-color: #B9D7D9
+  background-color: #66A3D2
   color: #2A2829
   font-size: 0.8em
 #files tr
-  border: 1px solid #B9D7D9
+  border: 1px solid #66A3D2
 #files td
   padding: 2px 5px
-  color: #668284
-  font-size: 0.9em
+  font-size: 0.8em
 
+#files .date
+  font-size: 0.7em
+  color: #66A3D2
 #files .icon
   width: 16px
 #files .age
   width: 20%
 #files td a
   text-decoration: none
-  color: #668284
 #files td a:hover
   text-decoration: underline
-  :color= !blue_clr
+  color= !blue_clr
+
+#footer
+  margin-top: 20px
+  text-align: right
+  font-size: 0.7em
