--- a/bin/views/dir.haml
+++ b/bin/views/dir.haml
@@ -19,5 +19,5 @@
       %td
         %a{:href => "#{@url_prefix}/#{obj[:name]}"}
           = obj[:name]
-      %td #{obj[:date]}        
+      %td.date #{obj[:date]}
       %td #{obj[:message]} (#{obj[:author]})
