--- a/bin/views/layout.haml
+++ b/bin/views/layout.haml
@@ -8,6 +8,8 @@
     #wrapper
       #header
         %h1 Git-Bro
+        %p browse your Git repositories
     #content
       = yield
     #footer
+      %a{:href => 'http://github.com/kolo/git-bro'}git-bro on Github
