Files info updates using AJAX calls

--- a/sinatra/views/application.sass
+++ b/sinatra/views/application.sass
@@ -35,6 +35,8 @@ a:hover
 #content h2
   font-size: 1.2em
 
+/* FILES TABLE STYLES */
+
 #files
   width: 100%
   border-collapse: collapse
@@ -49,13 +51,11 @@ a:hover
 #files td
   padding: 2px 5px
   font-size: 0.8em
-
-#files .date
-  font-size: 0.7em
-  color: #444
-#files .icon
+#files td.icon
   width: 16px
-#files .age
+#files td.name
+  width: 30%
+#files td.age
   width: 20%
 #files td a
   text-decoration: none
