--- a/sinatra/views/layout.haml
+++ b/sinatra/views/layout.haml
@@ -5,6 +5,8 @@
   %head
     %title Git-Bro - browse your repositories
     %link{:rel => 'stylesheet', :type => 'text/css', :href => '/application.css'}
+    %script{:type => 'text/javascript', :src => '/js/jquery-1.4.2.js'}
+    %script{:type => 'text/javascript', :src => '/js/application.js'}
   %body
     #wrapper
       #header
