--- a/sinatra/views/layout.haml
+++ b/sinatra/views/layout.haml
@@ -10,7 +10,8 @@
   %body
     #wrapper
       #header
-        %h1 Git-Bro
+        %h1 
+          %a{:href => "/"} Git-Bro
         %p browse your Git repositories
     #content
       = yield
