--- a/sinatra/views/application.sass
+++ b/sinatra/views/application.sass
@@ -90,6 +90,19 @@ table td a:hover
 .pagination a:hover
   text-decoration: none
 
+.commit_details
+  margin-top: 30px
+  border: 1px solid #CCC
+  padding: 10px
+  font-family: 'DejaVu Sans Mono', 'Bitstream Sans Mono', 'Courier New'
+  font-size: 12px
+  background: #EAF2F5
+.commit_details .sha
+  margin-bottom: 10px
+  font-size: 1.5em
+.commit_details .message
+  margin-bottom: 10px
+
 #footer
   margin-top: 20px
   text-align: right
