File content is rendered using Coderay

--- a/sinatra/views/coderay.sass
+++ b/sinatra/views/coderay.sass
@@ -1,9 +1,9 @@
 div.Coderay
   border: 1px solid #CCC
-  margin: 30px 0
   font-size: 12px
   font-family: 'Courier New', 'Tahoma', monospace
   overflow: auto
+  margin-bottom: 30px
 
 span.Coderay span
   padding-left: 10px
@@ -23,3 +23,20 @@ span.Coderay span
   background-color: #FDD
 .Coderay .ins
   background-color: #DFD
+
+/* Ruby styles */
+.Coderay .code
+  color: #333
+.Coderay .r
+  font-weight: bold
+  color: #A40031
+.Coderay .co, .Coderay .pc
+  font-weight: bold
+  color: #7A9A06
+.Coderay .k, .Coderay .sy
+  color: #AE8DCE
+.Coderay .iv
+  color: #76A5E0
+.Coderay .no
+  padding-right: 25px
+  background-color: #EEE
