--- a/sinatra/views/application.sass
+++ b/sinatra/views/application.sass
@@ -91,7 +91,7 @@ table td a:hover
   text-decoration: none
 
 .commit_details
-  margin-top: 30px
+  margin: 30px 0
   border: 1px solid #CCC
   padding: 10px
   font-family: 'DejaVu Sans Mono', 'Bitstream Sans Mono', 'Courier New'
