--- a/sinatra/views/file_content.haml
+++ b/sinatra/views/file_content.haml
@@ -1,2 +1,3 @@
-= highlight(@content, :ruby)
-%a{:href => '/'} Home
+%div#path
+  - render_path(@path, @branch)
+= highlight(@content, @lang, :line_numbers => @lang ? :inline : nil)
