--- a/sinatra/views/application.sass
+++ b/sinatra/views/application.sass
@@ -82,6 +82,8 @@ table td a:hover
   color: gray
   margin-right: 1px
   font-weight: bold
+  -moz-border-radius: 4px
+  -webkit-border-radius: 4px
 .pagination a
   padding: 3px 5px
   border: 1px solid
@@ -100,8 +102,42 @@ table td a:hover
 .commit_details .sha
   margin-bottom: 10px
   font-size: 1.5em
+  color: #66A3D2
 .commit_details .message
   margin-bottom: 10px
+
+#menu
+  margin-top: 20px
+  margin-bottom: 10px
+  font-size: 12px
+  text-align: right
+#menu a
+  background-color: #66A3D2
+  padding: 5px 7px
+  color: white
+  font-weight: bold
+  -moz-border-radius: 4px
+  -webkit-border-radius: 4px
+#menu a.active
+  background-color: white
+  color: #66A3D2
+  border: 1px solid #66A3D2
+#menu a:hover
+  text-decoration: none
+#menu #branch_span
+  display: inline
+  background-color: #66A3D2
+  color: white
+  padding: 5px 0px 5px 5px
+  margin-left: 10px
+#menu span
+  border: 1px solid #66A3D2
+  margin: 0
+  font-weight: bold
+#menu span#branch
+  padding: 4px 7px
+  background-color: white
+  color: black
 
 #footer
   margin-top: 20px
