--- a/sinatra/views/commit.haml
+++ b/sinatra/views/commit.haml
@@ -1,12 +1,5 @@
-%div.commit_details
-  %div.sha
-    = @commit.sha
-  %div.message
-    = @commit.message
-  %div.author
-    = @commit.author.name
-  %div.age
-    = @commit.date.relative_to(Time.now)
+= partial :menu, :locals => {:branch => @branch, :active => nil}
+= partial :commit_details, :locals => {:commit => @commit, :link_sha => false}
 - @commit.diffs.each do |diff|
   %div.Coderay
     = highlight(diff.diff, :diff, :tag => :span)
