--- a/sinatra/views/application.sass
+++ b/sinatra/views/application.sass
@@ -159,14 +159,16 @@ table td a:hover
   padding: 5px 7px 5px 7px
 #dropdown li.headlink ul
   margin-top: 5px
+  margin-left: -8px
   position: absolute
   display: none
 #dropdown li.headlink ul li
   background-color: #FFF
   float: none
   padding: 5px 7px
-  border: 1px solid #66A3D2
-  margin-bottom: 1px
+  border-right: 1px solid #66A3D2
+  border-top: 1px solid #66A3D2
+  border-left: 1px solid #66A3D2
 #dropdown li.headlink:hover ul
   display: block
 #dropdown li a:hover
