Delete old code, fix some minor issues

--- a/sinatra/views/menu.haml
+++ b/sinatra/views/menu.haml
@@ -16,7 +16,7 @@
             %li
               - fbn = b.ljust(20).gsub(/\s/,"&nbsp;")
               - if b == branch
-                = "&nbsp;&#10003" + fbn
+                = "&nbsp;&#10003;" + fbn
               - else
                 %a{:href => "/tree/#{b}"}
                   = "&nbsp;&nbsp;" + fbn
