Using bundler for gem management

--- a/sinatra/views/coderay.sass
+++ b/sinatra/views/coderay.sass
@@ -1,42 +1,51 @@
 div.Coderay
-  border: 1px solid #CCC
+  border: 1px solid #cccccc
   font-size: 12px
-  font-family: 'Courier New', 'Tahoma', monospace
+  font-family: "Courier New", "Tahoma", monospace
   overflow: auto
   margin-bottom: 30px
 
 span.Coderay span
   padding-left: 10px
 
-/* Diff styles */
+/* Diff styles
 .Coderay .head
   font-weight: bold
   padding: 5px
-  background-color: #EEE
-  border-bottom: solid 1px #CCC
+  background-color: #eeeeee
+  border-bottom: solid 1px #cccccc
+
 .Coderay span.head
   font-weight: normal
+
 .Coderay .chg, .Coderay .c
   color: gray
   padding-left: 0
-.Coderay .del
-  background-color: #FDD
-.Coderay .ins
-  background-color: #DFD
 
-/* Ruby styles */
+.Coderay .del
+  background-color: #ffdddd
+
+.Coderay .ins
+  background-color: #ddffdd
+
+/* Ruby styles
 .Coderay .code
-  color: #333
+  color: #333333
+
 .Coderay .r
   font-weight: bold
-  color: #A40031
+  color: #a40031
+
 .Coderay .co, .Coderay .pc
   font-weight: bold
-  color: #7A9A06
+  color: #7a9a06
+
 .Coderay .k, .Coderay .sy
-  color: #AE8DCE
+  color: #ae8dce
+
 .Coderay .iv
-  color: #76A5E0
+  color: #76a5e0
+
 .Coderay .no
   padding-right: 25px
-  background-color: #EEE
+  background-color: #eeeeee
