--- a/sinatra/views/application.sass
+++ b/sinatra/views/application.sass
@@ -2,80 +2,96 @@ body
   width: 1000px
   margin: auto
 
-!blue_clr= #227CE8
+$blue_clr: #227ce8
 
 h2
-  :color= !blue_clr
+  color: $blue_clr
 
 a
-  :color= !blue_clr
+  color: $blue_clr
   text-decoration: none
+
 a:hover
   text-decoration: underline
 
 #header
   padding: 5px 25px
-  border-bottom: 2px solid #66A3D2
-  background-color: #66A3D2
+  border-bottom: 2px solid #66a3d2
+  background-color: #66a3d2
   margin-top: 10px
-  color: #FFF
+  color: white
+
 #header p
   padding: 0
   margin: 0
+
 #header h1
   padding: 0
   margin: 0
+
 #header a
   color: white
+
 #header a:hover
   text-decoration: none
 
 #path
   font-size: 1.3em
   padding: 10px 0
+
 #repo-name
   font-weight: bold
 
 #content h2
   font-size: 1.2em
 
-/* FILES TABLE STYLES */
+/* FILES TABLE STYLES
 
 table
   width: 100%
   border-collapse: collapse
+
 table th
   text-align: left
   padding: 2px 5px
-  background-color: #66A3D2
-  color: #2A2829
+  background-color: #66a3d2
+  color: #2a2829
   font-size: 0.8em
+
 table tr
-  border: 1px solid #66A3D2
+  border: 1px solid #66a3d2
+
 table td
   padding: 2px 5px
   font-size: 0.8em
+
 #files td.icon
   width: 16px
+
 #files td.name
   width: 20%
+
 #files td.age
   width: 20%
+
 table td a
   text-decoration: none
+
 table td a:hover
   text-decoration: underline
-  color= !blue_clr
+  color: $blue_clr
 
 #commits td.sha
   font-family: monospace
   width: 5%
+
 #commits td.age
   width: 15%
 
 .pagination
   padding: 10px 0
   font-size: 0.8em
+
 .pagination span
   padding: 3px 5px
   border: 1px solid gray
@@ -84,25 +100,29 @@ table td a:hover
   font-weight: bold
   -moz-border-radius: 4px
   -webkit-border-radius: 4px
+
 .pagination a
   padding: 3px 5px
   border: 1px solid
-  border-color= !blue_clr
+  border-color: $blue_clr
   font-weight: bold
+
 .pagination a:hover
   text-decoration: none
 
 .commit_details
   margin: 30px 0
-  border: 1px solid #CCC
+  border: 1px solid #cccccc
   padding: 10px
-  font-family: 'DejaVu Sans Mono', 'Bitstream Sans Mono', 'Courier New'
+  font-family: "DejaVu Sans Mono", "Bitstream Sans Mono", "Courier New"
   font-size: 12px
-  background: #EAF2F5
+  background: #eaf2f5
+
 .commit_details .sha
   margin-bottom: 10px
   font-size: 1.5em
-  color: #66A3D2
+  color: #66a3d2
+
 .commit_details .message
   margin-bottom: 10px
 
@@ -111,34 +131,41 @@ table td a:hover
   margin-bottom: 10px
   font-size: 12px
   text-align: right
+
 #menu #top a
-  background-color: #66A3D2
+  background-color: #66a3d2
   padding: 5px 7px
   color: white
   font-weight: bold
   -moz-border-radius: 4px
   -webkit-border-radius: 4px
+
 #menu #top a.active
   background-color: white
-  color: #66A3D2
-  border: 1px solid #66A3D2
+  color: #66a3d2
+  border: 1px solid #66a3d2
+
 #menu #top a:hover
   text-decoration: none
+
 #menu #branch_span
   display: inline
-  background-color: #66A3D2
+  background-color: #66a3d2
   color: white
   padding: 5px 0px 5px 5px
   margin-left: 10px
+
 #menu #top span
-  border: 1px solid #66A3D2
+  border: 1px solid #66a3d2
   margin: 0
   font-weight: bold
+
 #menu #top span#branch
   padding: 4px 7px
   background-color: white
   color: black
   cursor: pointer
+
 #menu #top
   margin-bottom: 5px
 
@@ -146,31 +173,38 @@ table td a:hover
   clear: both
 
 #switch_branch
-  font-family: 'DejaVu Sans Mono', 'Bitstream Sans Mono', 'Courier New'
+  font-family: "DejaVu Sans Mono", "Bitstream Sans Mono", "Courier New"
   margin-top: 10px
+
 #dropdown, #dropdown li ul
   list-style-type: none
   margin: 0
   padding: 0
+
 #dropdown li.headlink
-  border: 1px solid #66A3D2
+  border: 1px solid #66a3d2
+
 #dropdown li.headlink
   float: right
   padding: 5px 7px 5px 7px
+
 #dropdown li.headlink ul
   margin-top: 5px
   margin-left: -8px
   position: absolute
   display: none
+
 #dropdown li.headlink ul li
-  background-color: #FFF
+  background-color: white
   float: none
   padding: 5px 7px
-  border-right: 1px solid #66A3D2
-  border-top: 1px solid #66A3D2
-  border-left: 1px solid #66A3D2
+  border-right: 1px solid #66a3d2
+  border-top: 1px solid #66a3d2
+  border-left: 1px solid #66a3d2
+
 #dropdown li.headlink:hover ul
   display: block
+
 #dropdown li a:hover
   text-decoration: none
 
